--- a/public/plugins/easytimer/index.html
+++ b/public/plugins/easytimer/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Easy to use Timer/Chronometer/Countdown library compatible with AMD and NodeJS">
     <meta name="author" content="Albert González">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="shortcut icon" href="{{ asset('img/letter_logo.png') }}" >
 
     <title>EasyTimer.js</title>
 
